syntax="proto3";
package greet;

message Greeting {
    string first_name = 1;
    string last_name = 2;
}
message GreetEveryOneRequest {
    Greeting greeting = 1;
}
message GreetEveryOneResponse {
    string Result = 1;
}

service GreetService {
    rpc GreetEveryOne(stream GreetEveryOneRequest) returns (stream GreetEveryOneResponse) {};
}